# clan-mcp

./: README.md  clan-mcp.py  flake.nix  mcp.json  pyproject.toml
clan_mcp/: __init__.py
