[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clan-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Clan management"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastmcp",
]

[project.optional-dependencies]
dev = [
    "build",
    "ruff",
    "mypy",
]

[project.scripts]
clan-mcp = "clan_mcp:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["clan_mcp"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["clan_mcp"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = ["E402", "E203"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true
namespace_packages = true
explicit_package_bases = true
allow_untyped_decorators = true

[[tool.mypy.overrides]]
module = "fastmcp.*"
ignore_missing_imports = true
